phase1/Parsing/parser.automaton
State 0:
compilationUnit' -> . compilationUnit [ # ]
-- On SEMICOLON shift to state 1
-- On PUBLIC shift to state 2
-- On CLASS shift to state 3
-- On typeDeclarations shift to state 228
-- On typeDeclaration shift to state 232
-- On normalClassDeclaration shift to state 67
-- On modifier shift to state 118
-- On compilationUnit shift to state 233
-- On classDeclaration shift to state 231

State 1:
typeDeclaration -> SEMICOLON . [ SEMICOLON PUBLIC EOF CLASS ]
-- On SEMICOLON reduce production typeDeclaration -> SEMICOLON 
-- On PUBLIC reduce production typeDeclaration -> SEMICOLON 
-- On EOF reduce production typeDeclaration -> SEMICOLON 
-- On CLASS reduce production typeDeclaration -> SEMICOLON 

State 2:
modifier -> PUBLIC . [ CLASS ]
-- On CLASS reduce production modifier -> PUBLIC 

State 3:
normalClassDeclaration -> CLASS . identifier classBody [ ZERODIGIT VOID THIS SUPER SHORT SEMICOLON RPAR RETURN PUBLIC NONZERODIGIT LT LPAR LONG LBRAC INT INCR IF IDENT FLOAT FINAL EOF DOUBLE DECR CONTINUE CLASS CHAR BYTE BREAK BOOLEAN ]
-- On IDENT shift to state 4
-- On identifier shift to state 5

State 4:
identifier -> IDENT . [ SEMICOLON RPAR RBRAC POINT LSBRAC LPAR LBRAC INCR EQUAL DECR COMMA COLON ]
-- On SEMICOLON reduce production identifier -> IDENT 
-- On RPAR reduce production identifier -> IDENT 
-- On RBRAC reduce production identifier -> IDENT 
-- On POINT reduce production identifier -> IDENT 
-- On LSBRAC reduce production identifier -> IDENT 
-- On LPAR reduce production identifier -> IDENT 
-- On LBRAC reduce production identifier -> IDENT 
-- On INCR reduce production identifier -> IDENT 
-- On EQUAL reduce production identifier -> IDENT 
-- On DECR reduce production identifier -> IDENT 
-- On COMMA reduce production identifier -> IDENT 
-- On COLON reduce production identifier -> IDENT 

State 5:
normalClassDeclaration -> CLASS identifier . classBody [ ZERODIGIT VOID THIS SUPER SHORT SEMICOLON RPAR RETURN PUBLIC NONZERODIGIT LT LPAR LONG LBRAC INT INCR IF IDENT FLOAT FINAL EOF DOUBLE DECR CONTINUE CLASS CHAR BYTE BREAK BOOLEAN ]
-- On LPAR shift to state 6
-- On classBody shift to state 227

State 6:
classBody -> LPAR . classBodyDeclarations RPAR [ ZERODIGIT VOID THIS SUPER SHORT SEMICOLON RPAR RETURN PUBLIC NONZERODIGIT LT LPAR LONG LBRAC INT INCR IF IDENT FLOAT FINAL EOF DOUBLE DECR CONTINUE CLASS CHAR BYTE BREAK BOOLEAN ]
-- On VOID shift to state 7
-- On SHORT shift to state 8
-- On SEMICOLON shift to state 9
-- On PUBLIC shift to state 10
-- On LT shift to state 11
-- On LONG shift to state 19
-- On INT shift to state 20
-- On IDENT shift to state 4
-- On FLOAT shift to state 21
-- On DOUBLE shift to state 22
-- On CLASS shift to state 3
-- On CHAR shift to state 23
-- On BYTE shift to state 24
-- On BOOLEAN shift to state 25
-- On typeParameters shift to state 26
-- On simpleTypeName shift to state 55
-- On resultType shift to state 60
-- On primitiveType shift to state 36
-- On numericType shift to state 37
-- On normalClassDeclaration shift to state 67
-- On myType shift to state 68
-- On modifier shift to state 118
-- On methodHeader shift to state 122
-- On methodDeclaration shift to state 201
-- On integralType shift to state 41
-- On identifier shift to state 54
-- On floatingPointType shift to state 42
-- On fieldModifiers shift to state 202
-- On fieldModifier shift to state 208
-- On fieldDeclaration shift to state 209
-- On constructorModifiers shift to state 210
-- On constructorModifier shift to state 217
-- On constructorDeclarator shift to state 218
-- On constructorDeclaration shift to state 220
-- On classMemberDeclaration shift to state 221
-- On classDeclaration shift to state 222
-- On classBodyDeclarations shift to state 223
-- On classBodyDeclaration shift to state 226

State 7:
resultType -> VOID . [ IDENT ]
-- On IDENT reduce production resultType -> VOID 

State 8:
integralType -> SHORT . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production integralType -> SHORT 
-- On POINT reduce production integralType -> SHORT 
-- On IDENT reduce production integralType -> SHORT 

State 9:
classMemberDeclaration -> SEMICOLON . [ VOID SHORT SEMICOLON RPAR PUBLIC LT LONG INT IDENT FLOAT DOUBLE CLASS CHAR BYTE BOOLEAN ]
-- On VOID reduce production classMemberDeclaration -> SEMICOLON 
-- On SHORT reduce production classMemberDeclaration -> SEMICOLON 
-- On SEMICOLON reduce production classMemberDeclaration -> SEMICOLON 
-- On RPAR reduce production classMemberDeclaration -> SEMICOLON 
-- On PUBLIC reduce production classMemberDeclaration -> SEMICOLON 
-- On LT reduce production classMemberDeclaration -> SEMICOLON 
-- On LONG reduce production classMemberDeclaration -> SEMICOLON 
-- On INT reduce production classMemberDeclaration -> SEMICOLON 
-- On IDENT reduce production classMemberDeclaration -> SEMICOLON 
-- On FLOAT reduce production classMemberDeclaration -> SEMICOLON 
-- On DOUBLE reduce production classMemberDeclaration -> SEMICOLON 
-- On CLASS reduce production classMemberDeclaration -> SEMICOLON 
-- On CHAR reduce production classMemberDeclaration -> SEMICOLON 
-- On BYTE reduce production classMemberDeclaration -> SEMICOLON 
-- On BOOLEAN reduce production classMemberDeclaration -> SEMICOLON 

State 10:
constructorModifier -> PUBLIC . [ PUBLIC LT IDENT ]
fieldModifier -> PUBLIC . [ SHORT PUBLIC LONG INT FLOAT DOUBLE CHAR BYTE BOOLEAN ]
modifier -> PUBLIC . [ CLASS ]
-- On SHORT reduce production fieldModifier -> PUBLIC 
-- On PUBLIC reduce production constructorModifier -> PUBLIC 
-- On PUBLIC reduce production fieldModifier -> PUBLIC 
-- On LT reduce production constructorModifier -> PUBLIC 
-- On LONG reduce production fieldModifier -> PUBLIC 
-- On INT reduce production fieldModifier -> PUBLIC 
-- On IDENT reduce production constructorModifier -> PUBLIC 
-- On FLOAT reduce production fieldModifier -> PUBLIC 
-- On DOUBLE reduce production fieldModifier -> PUBLIC 
-- On CLASS reduce production modifier -> PUBLIC 
-- On CHAR reduce production fieldModifier -> PUBLIC 
-- On BYTE reduce production fieldModifier -> PUBLIC 
-- On BOOLEAN reduce production fieldModifier -> PUBLIC 
** Conflict on PUBLIC

State 11:
typeParameters -> LT . typeParameter LPAR COMMA typeParameter RPAR GT [ IDENT ]
-- On IDENT shift to state 4
-- On typeParameter shift to state 12
-- On identifier shift to state 18

State 12:
typeParameters -> LT typeParameter . LPAR COMMA typeParameter RPAR GT [ IDENT ]
-- On LPAR shift to state 13

State 13:
typeParameters -> LT typeParameter LPAR . COMMA typeParameter RPAR GT [ IDENT ]
-- On COMMA shift to state 14

State 14:
typeParameters -> LT typeParameter LPAR COMMA . typeParameter RPAR GT [ IDENT ]
-- On IDENT shift to state 4
-- On typeParameter shift to state 15
-- On identifier shift to state 18

State 15:
typeParameters -> LT typeParameter LPAR COMMA typeParameter . RPAR GT [ IDENT ]
-- On RPAR shift to state 16

State 16:
typeParameters -> LT typeParameter LPAR COMMA typeParameter RPAR . GT [ IDENT ]
-- On GT shift to state 17

State 17:
typeParameters -> LT typeParameter LPAR COMMA typeParameter RPAR GT . [ IDENT ]
-- On IDENT reduce production typeParameters -> LT typeParameter LPAR COMMA typeParameter RPAR GT 

State 18:
typeParameter -> identifier . [ RPAR LPAR ]
-- On RPAR reduce production typeParameter -> identifier 
-- On LPAR reduce production typeParameter -> identifier 

State 19:
integralType -> LONG . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production integralType -> LONG 
-- On POINT reduce production integralType -> LONG 
-- On IDENT reduce production integralType -> LONG 

State 20:
integralType -> INT . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production integralType -> INT 
-- On POINT reduce production integralType -> INT 
-- On IDENT reduce production integralType -> INT 

State 21:
floatingPointType -> FLOAT . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production floatingPointType -> FLOAT 
-- On POINT reduce production floatingPointType -> FLOAT 
-- On IDENT reduce production floatingPointType -> FLOAT 

State 22:
floatingPointType -> DOUBLE . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production floatingPointType -> DOUBLE 
-- On POINT reduce production floatingPointType -> DOUBLE 
-- On IDENT reduce production floatingPointType -> DOUBLE 

State 23:
integralType -> CHAR . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production integralType -> CHAR 
-- On POINT reduce production integralType -> CHAR 
-- On IDENT reduce production integralType -> CHAR 

State 24:
integralType -> BYTE . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production integralType -> BYTE 
-- On POINT reduce production integralType -> BYTE 
-- On IDENT reduce production integralType -> BYTE 

State 25:
primitiveType -> BOOLEAN . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production primitiveType -> BOOLEAN 
-- On POINT reduce production primitiveType -> BOOLEAN 
-- On IDENT reduce production primitiveType -> BOOLEAN 

State 26:
constructorDeclarator -> typeParameters . simpleTypeName LBRAC RBRAC [ LPAR ]
constructorDeclarator -> typeParameters . simpleTypeName LBRAC formalParameterList RBRAC [ LPAR ]
-- On IDENT shift to state 4
-- On simpleTypeName shift to state 27
-- On identifier shift to state 54

State 27:
constructorDeclarator -> typeParameters simpleTypeName . LBRAC RBRAC [ LPAR ]
constructorDeclarator -> typeParameters simpleTypeName . LBRAC formalParameterList RBRAC [ LPAR ]
-- On LBRAC shift to state 28

State 28:
constructorDeclarator -> typeParameters simpleTypeName LBRAC . RBRAC [ LPAR ]
constructorDeclarator -> typeParameters simpleTypeName LBRAC . formalParameterList RBRAC [ LPAR ]
-- On SHORT shift to state 8
-- On RBRAC shift to state 29
-- On LONG shift to state 19
-- On INT shift to state 20
-- On FLOAT shift to state 21
-- On FINAL shift to state 30
-- On DOUBLE shift to state 22
-- On CHAR shift to state 23
-- On BYTE shift to state 24
-- On BOOLEAN shift to state 25
-- On variableModifiers shift to state 31
-- On variableModifier shift to state 43
-- On primitiveType shift to state 36
-- On numericType shift to state 37
-- On myType shift to state 44
-- On lastFormalParameter shift to state 46
-- On integralType shift to state 41
-- On formalParameters shift to state 47
-- On formalParameterList shift to state 51
-- On formalParameter shift to state 53
-- On floatingPointType shift to state 42

State 29:
constructorDeclarator -> typeParameters simpleTypeName LBRAC RBRAC . [ LPAR ]
-- On LPAR reduce production constructorDeclarator -> typeParameters simpleTypeName LBRAC RBRAC 

State 30:
variableModifier -> FINAL . [ SHORT LONG INT IDENT FLOAT FINAL DOUBLE CHAR BYTE BOOLEAN ]
-- On SHORT reduce production variableModifier -> FINAL 
-- On LONG reduce production variableModifier -> FINAL 
-- On INT reduce production variableModifier -> FINAL 
-- On IDENT reduce production variableModifier -> FINAL 
-- On FLOAT reduce production variableModifier -> FINAL 
-- On FINAL reduce production variableModifier -> FINAL 
-- On DOUBLE reduce production variableModifier -> FINAL 
-- On CHAR reduce production variableModifier -> FINAL 
-- On BYTE reduce production variableModifier -> FINAL 
-- On BOOLEAN reduce production variableModifier -> FINAL 

State 31:
formalParameter -> variableModifiers . myType variableDeclaratorId [ RBRAC COMMA ]
lastFormalParameter -> variableModifiers . variableDeclaratorId [ RBRAC ]
lastFormalParameter -> variableModifiers . myType variableDeclaratorId [ RBRAC ]
variableModifiers -> variableModifiers . variableModifier [ SHORT LONG INT IDENT FLOAT FINAL DOUBLE CHAR BYTE BOOLEAN ]
-- On SHORT shift to state 8
-- On LONG shift to state 19
-- On INT shift to state 20
-- On IDENT shift to state 4
-- On FLOAT shift to state 21
-- On FINAL shift to state 30
-- On DOUBLE shift to state 22
-- On CHAR shift to state 23
-- On BYTE shift to state 24
-- On BOOLEAN shift to state 25
-- On variableModifier shift to state 32
-- On variableDeclaratorId shift to state 33
-- On primitiveType shift to state 36
-- On numericType shift to state 37
-- On myType shift to state 38
-- On integralType shift to state 41
-- On identifier shift to state 40
-- On floatingPointType shift to state 42

State 32:
variableModifiers -> variableModifiers variableModifier . [ SHORT LONG INT IDENT FLOAT FINAL DOUBLE CHAR BYTE BOOLEAN ]
-- On SHORT reduce production variableModifiers -> variableModifiers variableModifier 
-- On LONG reduce production variableModifiers -> variableModifiers variableModifier 
-- On INT reduce production variableModifiers -> variableModifiers variableModifier 
-- On IDENT reduce production variableModifiers -> variableModifiers variableModifier 
-- On FLOAT reduce production variableModifiers -> variableModifiers variableModifier 
-- On FINAL reduce production variableModifiers -> variableModifiers variableModifier 
-- On DOUBLE reduce production variableModifiers -> variableModifiers variableModifier 
-- On CHAR reduce production variableModifiers -> variableModifiers variableModifier 
-- On BYTE reduce production variableModifiers -> variableModifiers variableModifier 
-- On BOOLEAN reduce production variableModifiers -> variableModifiers variableModifier 

State 33:
lastFormalParameter -> variableModifiers variableDeclaratorId . [ RBRAC ]
variableDeclaratorId -> variableDeclaratorId . LSBRAC RSBRAC [ RBRAC LSBRAC ]
-- On LSBRAC shift to state 34
-- On RBRAC reduce production lastFormalParameter -> variableModifiers variableDeclaratorId 

State 34:
variableDeclaratorId -> variableDeclaratorId LSBRAC . RSBRAC [ SEMICOLON RBRAC LSBRAC EQUAL COMMA ]
-- On RSBRAC shift to state 35

State 35:
variableDeclaratorId -> variableDeclaratorId LSBRAC RSBRAC . [ SEMICOLON RBRAC LSBRAC EQUAL COMMA ]
-- On SEMICOLON reduce production variableDeclaratorId -> variableDeclaratorId LSBRAC RSBRAC 
-- On RBRAC reduce production variableDeclaratorId -> variableDeclaratorId LSBRAC RSBRAC 
-- On LSBRAC reduce production variableDeclaratorId -> variableDeclaratorId LSBRAC RSBRAC 
-- On EQUAL reduce production variableDeclaratorId -> variableDeclaratorId LSBRAC RSBRAC 
-- On COMMA reduce production variableDeclaratorId -> variableDeclaratorId LSBRAC RSBRAC 

State 36:
myType -> primitiveType . [ POINT IDENT ]
-- On POINT reduce production myType -> primitiveType 
-- On IDENT reduce production myType -> primitiveType 

State 37:
primitiveType -> numericType . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production primitiveType -> numericType 
-- On POINT reduce production primitiveType -> numericType 
-- On IDENT reduce production primitiveType -> numericType 

State 38:
formalParameter -> variableModifiers myType . variableDeclaratorId [ RBRAC COMMA ]
lastFormalParameter -> variableModifiers myType . variableDeclaratorId [ RBRAC ]
-- On IDENT shift to state 4
-- On variableDeclaratorId shift to state 39
-- On identifier shift to state 40

State 39:
formalParameter -> variableModifiers myType variableDeclaratorId . [ RBRAC COMMA ]
lastFormalParameter -> variableModifiers myType variableDeclaratorId . [ RBRAC ]
variableDeclaratorId -> variableDeclaratorId . LSBRAC RSBRAC [ RBRAC LSBRAC COMMA ]
-- On LSBRAC shift to state 34
-- On RBRAC reduce production formalParameter -> variableModifiers myType variableDeclaratorId 
-- On RBRAC reduce production lastFormalParameter -> variableModifiers myType variableDeclaratorId 
-- On COMMA reduce production formalParameter -> variableModifiers myType variableDeclaratorId 
** Conflict on RBRAC

State 40:
variableDeclaratorId -> identifier . [ SEMICOLON RBRAC LSBRAC EQUAL COMMA ]
-- On SEMICOLON reduce production variableDeclaratorId -> identifier 
-- On RBRAC reduce production variableDeclaratorId -> identifier 
-- On LSBRAC reduce production variableDeclaratorId -> identifier 
-- On EQUAL reduce production variableDeclaratorId -> identifier 
-- On COMMA reduce production variableDeclaratorId -> identifier 

State 41:
numericType -> integralType . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production numericType -> integralType 
-- On POINT reduce production numericType -> integralType 
-- On IDENT reduce production numericType -> integralType 

State 42:
numericType -> floatingPointType . [ RBRAC POINT IDENT ]
-- On RBRAC reduce production numericType -> floatingPointType 
-- On POINT reduce production numericType -> floatingPointType 
-- On IDENT reduce production numericType -> floatingPointType 

State 43:
variableModifiers -> variableModifier . [ SHORT LONG INT IDENT FLOAT FINAL DOUBLE CHAR BYTE BOOLEAN ]
-- On SHORT reduce production variableModifiers -> variableModifier 
-- On LONG reduce production variableModifiers -> variableModifier 
-- On INT reduce production variableModifiers -> variableModifier 
-- On IDENT reduce production variableModifiers -> variableModifier 
-- On FLOAT reduce production variableModifiers -> variableModifier 
-- On FINAL reduce production variableModifiers -> variableModifier 
-- On DOUBLE reduce production variableModifiers -> variableModifier 
-- On CHAR reduce production variableModifiers -> variableModifier 
-- On BYTE reduce production variableModifiers -> variableModifier 
-- On BOOLEAN reduce production variableModifiers -> variableModifier 

State 44:
formalParameter -> myType . variableDeclaratorId [ RBRAC COMMA ]
-- On IDENT shift to state 4
-- On variableDeclaratorId shift to state 45
-- On identifier shift to state 40

State 45:
formalParameter -> myType variableDeclaratorId . [ RBRAC COMMA ]
variableDeclaratorId -> variableDeclaratorId . LSBRAC RSBRAC [ RBRAC LSBRAC COMMA ]
-- On LSBRAC shift to state 34
-- On RBRAC reduce production formalParameter -> myType variableDeclaratorId 
-- On COMMA reduce production formalParameter -> myType variableDeclaratorId 

State 46:
formalParameterList -> lastFormalParameter . [ RBRAC ]
-- On RBRAC reduce production formalParameterList -> lastFormalParameter 

State 47:
formalParameterList -> formalParameters . COMMA lastFormalParameter [ RBRAC ]
formalParameters -> formalParameters . COMMA formalParameter [ COMMA ]
-- On COMMA shift to state 48
